--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,12 +1,35 @@
 ﻿<Window x:Class="AudioPlayerProject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AudioPlayerProject"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Music Player" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
+            <Button Content="Добавить треки" Command="{Binding AddTrackCommand}" Margin="0,0,10,0"/>
+            <TextBlock Text="Музыкальная библиотека" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+        </StackPanel>
+
+        <ListBox Grid.Row="1" ItemsSource="{Binding AudioTracks}" Margin="10">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Vertical" Margin="5">
+                        <TextBlock Text="{Binding Title}" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding Author}" Foreground="Gray"/>
+                        <TextBlock Text="{Binding FileName}" FontSize="10" Foreground="DarkGray"/>
+                        <Button Content="Удалить" 
+                                Command="{Binding DataContext.DeleteTrackCommand, RelativeSource={RelativeSource AncestorType=ListBox}}"
+                                CommandParameter="{Binding}"
+                                Width="60" Margin="0,5,0,0"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <TextBlock Grid.Row="2" Text="{Binding StatusMessage}" Margin="10" Foreground="Blue"/>
     </Grid>
 </Window>
