--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="AudioPlayerProject.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:AudioPlayerProject.Converters"
              xmlns:local="clr-namespace:AudioPlayerProject"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Application.Resources>
 </Application>
