--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -23,7 +23,7 @@
                     </Border>
 
                     <!-- Информация о текущем треке -->
-                    <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10,5">
+                    <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10">
                         <TextBlock Text="{Binding CurrentTrack.Title}" 
                                    FontWeight="Bold" 
                                    FontSize="14"
@@ -37,7 +37,7 @@
                     </StackPanel>
 
                     <!-- Кнопки управления -->
-                    <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,10">
                         <Button Content="⏮" 
                                 Command="{Binding PreviousCommand}" 
                                 Width="40" Height="40" FontSize="16" Margin="5"/>
@@ -47,6 +47,27 @@
                         <Button Content="⏭" 
                                 Command="{Binding NextCommand}" 
                                 Width="40" Height="40" FontSize="16" Margin="5"/>
+                        
+                        <!-- Кнопка громкости-->
+                        <Button Content="🔊" Command="{Binding ToggleVolumeCommand}"
+                                Width="40" Height="40" FontSize="14" Margin="5"/>
+
+                        <!-- Панель громкости -->
+                        <Border Background="White" BorderBrush="Gray" BorderThickness="1"
+                                Padding="10,5" VerticalAlignment="Center"
+                                Visibility="{Binding VolumeVisibility}">
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                                <TextBlock Text="{Binding VolumePercent}"
+                                           HorizontalAlignment="Center"
+                                           FontWeight="Bold"
+                                           Margin="0,0,0,5"/>
+                                <Slider Orientation="Vertical" Minimum="0" Maximum="1"
+                                        Value="{Binding Volume}"
+                                        Width="20" Height="80"
+                                        TickFrequency="0.01"
+                                        IsSnapToTickEnabled="True"/>
+                            </StackPanel>
+                        </Border>
                     </StackPanel>
                 </Grid>
             </TabItem>
